--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,3 +75,8 @@
   transform: translateX(-50%);
   white-space: nowrap;
 }
+
+.grid-information {
+  display: grid;
+  grid-template-columns: 0.5fr 1fr;
+}
